# ffmpeg

app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  GLUtils.cpp  GLUtils.h  MLOG.h  audio_player.cpp  audio_player.h  com_example_myapplication_audio.cpp  com_example_myapplication_media_player.cpp  native-lib.cpp  utils.h
app/src/main/cpp/decoder/: AudioDecoder.cpp  AudioDecoder.h  Decoder.h  DecoderBase.cpp  DecoderBase.h  VideoDecoder.cpp  VideoDecoder.h
app/src/main/cpp/include/libswscale/: swscale.h
app/src/main/cpp/player/: AudioPlayer.cpp  AudioPlayer.h  FFMpegMediaPlayer.cpp  FFMpegMediaPlayer.h  MediaPlayer.h  VideoPlayer.cpp  VideoPlayer.h
app/src/main/cpp/render/: AudioRender.h  BaseGLRender.h  GLRender.cpp  GLRender.h  NativeRender.cpp  NativeRender.h  OpenSLRender.cpp  OpenSLRender.h  VideoRender.h
app/src/main/java/com/example/myapplication/: AudioPlayer.kt  GLVideoActivity.kt  MainActivity.kt  MediaPlayer.kt  VideoActivity.kt
app/src/main/res/layout/: activity_main.xml  activity_video.xml  activity_video_gl.xml  item_song.xml
app/src/main/res/values/: arrays.xml
gradle/wrapper/: gradle-wrapper.properties
